--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>top page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -7,6 +7,6 @@
 </head>
 <body class="container">
     <h1 class="display-4">Hello page</h1>
-    <p class="msg">this is sample pge</p>
+    <p class="h6 alert alert-primary" th:text="${msg}"></p>
 </body>
 </html>
