--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,21 @@
 <html lang="jp" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>top page</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body class="container">
     <h1 class="display-4">Hello page</h1>
     <p th:text="${msg}"></p>
-    <p class="h6 alert alert-primary" th:text="${content}"></p>
+    <div class="h6 alert alert-primary">
+        <form method="post" action=".">
+            <div class="input-group">
+                <input type="text" class="form-control me-1" name="text1" th:value="${value}" />
+                <span class="input-group-btn">
+                    <input type="submit" class="btn btn-primary px-4" value="Click" />
+                </span>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
