--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,16 +6,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     </head>
     <body class="container">
-        <h1 class="display-4">Hello page</h1>
-        <div class="alert alert-primary" th:if="${flag}">
-            <h5>Alert</h5>
-            <p th:text="${msg}"></p>
-        </div>
-        <div class="card" th:unless="${flag}">
-            <div class="card-body">
-                <h5 class="card-title">Message</h5>
-                <p class="card-text" th:text="${msg}"></p>
-            </div>
-        </div>
+        <h1 class="display-4 mv-4">Hello page</h1>
+        <p th:text="${msg}"></p>
+        <ul class="list-group" th:each="item:${data}">
+            <li class="list-group-item" th:text="${item}"></li>
+        </ul>
     </body>
 </html>
