--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,9 +7,6 @@
     </head>
     <body class="container">
         <h1 class="display-4 mv-4">Hello page</h1>
-        <p th:text="${msg}"></p>
-        <ul class="list-group" th:each="item:${data}">
-            <li class="list-group-item" th:text="${item}"></li>
-        </ul>
+        <p>{{msg}}</p>
     </body>
 </html>
