--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,10 @@
     </head>
     <body class="container">
         <h1 class="display-4 mv-4">Hello page</h1>
-        <p>{{msg}}</p>
+        <hr>
+        <pre>{{msg}}</pre>
+        <hr>
+        <pre>{{{msg}}}</pre>
+        <hr>
     </body>
 </html>
